Mask Mexico and Canada from cluster maps

--- a/1_pop_cluster_map.ipynb
+++ b/1_pop_cluster_map.ipynb
@@ -45,6 +45,8 @@
     "from datetime           import datetime, timedelta\n",
     "from cartopy            import feature\n",
     "from cartopy.crs        import LambertConformal, PlateCarree\n",
+    "from cartopy.io import shapereader\n",
+    "from cartopy.feature import ShapelyFeature\n",
     "from dbfread            import DBF\n",
     "from docx               import Document\n",
     "from textwrap           import fill as txt_wrap\n",
@@ -52,7 +54,6 @@
     "from ipyparallel        import Cluster\n",
     "from sklearn.cluster    import AgglomerativeClustering\n",
     "from functools          import partial\n",
-    "\n",
     "from scipy.spatial      import Voronoi\n",
     "from shapely.geometry   import Polygon\n",
     "from shapely.ops        import unary_union\n",
@@ -494,6 +495,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d13299ba-219b-423d-a3fd-03de2197ceb7",
+   "metadata": {},
+   "source": [
+    "#### GD4 - load CAN/MEX shapefiles for use as masking layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9a88293e-e131-435f-b483-3b4a95a5fb27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_shp(addr):\n",
+    "    shp = shapereader.Reader(addr).records()\n",
+    "    shp = next(shp).geometry\n",
+    "    return ShapelyFeature(shp.geoms, PlateCarree())\n",
+    "\n",
+    "can_mask   = read_shp('A_Input/gadm40_CAN_shp/gadm40_CAN_0.shp')\n",
+    "mex_mask   = read_shp('A_Input/gadm40_MEX_shp/gadm40_MEX_0.shp')\n",
+    "usa_border = read_shp('A_Input/gadm40_USA_shp/gadm40_USA_0.shp')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "15edf0c1-3995-4c01-9364-0630edb65e14",
    "metadata": {},
    "source": [
@@ -502,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "9390a35a-4e92-4f56-90c3-adae3c2952f0",
    "metadata": {},
    "outputs": [],
@@ -533,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "c6fb3cca-b253-4240-8d2f-15f99fa62a87",
    "metadata": {},
    "outputs": [
@@ -595,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "698a3688-72ee-4f26-8487-ec47ad835e35",
    "metadata": {},
    "outputs": [],
@@ -721,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "20f5eba1-fa93-4217-9df6-626a48df66d4",
    "metadata": {},
    "outputs": [],
@@ -807,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "449db4f6-89a7-49c1-9d00-00e77016f2c7",
    "metadata": {},
    "outputs": [],
@@ -884,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "a6b8c89e-b560-4ff9-a7c1-a2ec9bec493f",
    "metadata": {},
    "outputs": [],
@@ -956,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "1412ba81-f5bc-4cdc-87e1-fa0a7e6e750a",
    "metadata": {},
    "outputs": [],
@@ -994,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "3c4676da-dc84-42b5-a6d8-4c62a5f6ffcb",
    "metadata": {},
    "outputs": [],
@@ -1039,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "16ac184b-0922-4b57-b5f8-742e0a0763cb",
    "metadata": {},
    "outputs": [],
@@ -1099,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "c871d19a-6a5b-4561-adad-1df5fa151c7c",
    "metadata": {},
    "outputs": [],
@@ -1125,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "82bf0029-1941-481e-90af-181cfd29ab5d",
    "metadata": {},
    "outputs": [],
@@ -1158,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "65311cb6-7c5a-4d9b-8960-47244f43d3bc",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1198,7 @@
     "## 9 - Cluster labels\n",
     "\n",
     "## draw generic map layers\n",
-    "def draw_generic_map(ax):\n",
+    "def draw_generic_map(ax, map_mask = [can_mask, mex_mask]):\n",
     "    poster_ax[ax].set_extent(set_map['bounds'])\n",
     "    poster_ax[ax].add_geometries(list(feature.STATES.geometries()),\n",
     "        facecolor = '#33221100', edgecolor = set_color['OrangeLight'],\n",
@@ -1180,6 +1206,9 @@
     "    poster_ax[ax].add_feature(feature.LAKES,\n",
     "        facecolor = set_color['OrangeBG'], edgecolor = set_color['OrangeLight'],\n",
     "        lw = 1, zorder = 1)\n",
+    "    for i in map_mask:\n",
+    "        poster_ax[ax].add_feature(i, facecolor = set_color['OrangeBG'],\n",
+    "            edgecolor = set_color['OrangeLight'], lw = 1, zorder = 7)\n",
     "    poster_ax[ax].add_feature(feature.OCEAN,\n",
     "        facecolor = set_color['OrangeBG'], edgecolor = set_color['OrangeLight'],\n",
     "        lw = 1, zorder = 8)\n",
@@ -1240,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "66c2d825-5009-40c7-8cb3-173d4bf3bc79",
    "metadata": {},
    "outputs": [],
@@ -1358,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "902e7bd8-d1df-416a-82a5-3c52df3fbf95",
    "metadata": {},
    "outputs": [],
@@ -1520,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "b2860728-2bc2-401e-a043-c037c8752604",
    "metadata": {},
    "outputs": [],
@@ -1533,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "257b6438-6ef8-4ea2-b4d8-a5039053e607",
    "metadata": {},
    "outputs": [
@@ -1542,25 +1571,33 @@
      "output_type": "stream",
      "text": [
       "Time log:\n",
-      "   H2: 12:27:39\n",
-      "   H3: 12:27:39\n",
-      "  GD1: 12:27:39\n",
-      "  RD1: 12:27:39\n",
-      "  RD2: 12:27:39\n",
-      "  RD3: 12:27:39\n",
-      "  MD1: 12:28:21\n",
-      "  MD2: 12:28:21\n",
-      "  MD3: 12:28:21\n",
-      " PVD1: 12:28:21\n",
-      " PVD2: 12:28:23\n",
-      "  RV0: 12:28:23\n",
-      "  End: 12:28:30\n"
+      "   H2: 11:14:16\n",
+      "   H3: 11:14:16\n",
+      "  GD1: 11:14:17\n",
+      "  RD1: 11:14:17\n",
+      "  RD2: 11:14:17\n",
+      "  RD3: 11:14:17\n",
+      "  MD1: 11:15:23\n",
+      "  MD2: 11:15:23\n",
+      "  MD3: 11:15:23\n",
+      " PVD1: 11:15:24\n",
+      " PVD2: 11:15:25\n",
+      "  RV0: 11:15:25\n",
+      "  End: 11:16:48\n"
      ]
     }
    ],
    "source": [
     "log_time()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c572942a-9e01-4796-b45e-2146a99a2142",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
