Add methods description and a quartile color scheme

--- a/1_pop_cluster_map.ipynb
+++ b/1_pop_cluster_map.ipynb
@@ -484,14 +484,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_explanatory_text(addr = 'A_Input/explanation.docx', n = 100):\n",
+    "def read_docx_text(addr, n):\n",
     "    explain = Document(addr).paragraphs\n",
     "    explain = [txt_wrap(i.text, n) for i in explain]\n",
     "    explain = '\\n'.join(explain)\n",
     "    return explain\n",
     "\n",
     "## execute code\n",
-    "explanatory_text = read_explanatory_text()\n",
+    "explanatory_text = read_docx_text('A_Input/explanation.docx', 100)\n",
+    "method_text      = read_docx_text('A_Input/method.docx',       70)\n",
     "log_time('RD3')"
    ]
   },
@@ -913,6 +914,38 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "20efd0d4-7be4-4840-8d21-b0ced0220c8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def brew_colors(stat_series, stat_cuts):\n",
+    "    stat_cuts = np.append(stat_cuts.values, 9e9)\n",
+    "    stat_cuts = np.append(-9e9, stat_cuts)\n",
+    "    stat_labels = ['AzureBG', 'AzureLight', 'AzureMedium']\n",
+    "    stat_series = pd.cut(stat_series, stat_cuts, labels = stat_labels)\n",
+    "    stat_series = stat_series.replace(set_color)\n",
+    "    return stat_series\n",
+    "\n",
+    "## execute code\n",
+    "cluster_data['hdi_color'] = brew_colors(cluster_data['hdi'],\n",
+    "    cluster_data['hdi'].quantile([0.25, 0.75]))\n",
+    "cluster_data['pop_color'] = brew_colors(cluster_data['population'],\n",
+    "    cluster_data['population'].quantile([0.25, 0.75]))\n",
+    "cluster_data['rep_color'] = brew_colors(cluster_data['rep_pct'],\n",
+    "    cluster_data['rep_pct'].quantile([0.25, 0.75]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7d3ed45-4a9b-42ef-97a0-c1029b414ddd",
+   "metadata": {},
+   "source": [
+    "#### CSS3 - Fill in explanation statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "a6b8c89e-b560-4ff9-a7c1-a2ec9bec493f",
    "metadata": {},
    "outputs": [],
@@ -946,9 +979,7 @@
     "    x = dat.copy().rep_pct.sort_values(ascending = False) - 0.5\n",
     "    stats['rep_count'] = (x >=  0.05).sum()\n",
     "    stats['dem_count'] = (x <= -0.05).sum()\n",
-    "   \n",
-    "    \n",
-    "    \n",
+    "\n",
     "    ## Figure 4 statistics - politics x hdi\n",
     "    x = pd.concat([x, dat['hdi']], axis = 1)\n",
     "    x['rep'] = pd.cut(x.rep_pct, [-9999, -0.05, 0.05, 9999],\n",
@@ -982,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "1412ba81-f5bc-4cdc-87e1-fa0a7e6e750a",
    "metadata": {},
    "outputs": [],
@@ -1020,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "3c4676da-dc84-42b5-a6d8-4c62a5f6ffcb",
    "metadata": {},
    "outputs": [],
@@ -1065,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "16ac184b-0922-4b57-b5f8-742e0a0763cb",
    "metadata": {},
    "outputs": [],
@@ -1111,8 +1142,8 @@
     "    \n",
     "    ## methods\n",
     "    poster_ax['elbow'] = poster_fig.add_subplot(poster_grid[8:10, 9:12])\n",
-    "    poster_ax['map2'] = poster_fig.add_subplot(\n",
-    "        poster_grid[10:12, 9:12], projection = set_map['map_proj'])\n",
+    "    poster_ax['map2'] = poster_fig.add_subplot(poster_grid[10:12, 9:12],\n",
+    "        projection = set_map['map_proj'])\n",
     "    poster_ax['method'] = poster_fig.add_subplot(poster_grid[8:12, 12:18])\n",
     "\n",
     "    ## remove axis ticks\n",
@@ -1133,25 +1164,26 @@
    "id": "08bdb9ab-81c4-41c6-8374-624cad481852",
    "metadata": {},
    "source": [
-    "#### RV1 - draw explanation panel"
+    "#### RV1 - draw text panel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "c871d19a-6a5b-4561-adad-1df5fa151c7c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def render_explanation(txt = explanatory_text):\n",
-    "    poster_ax['explain'].set_ylim(0, 6)\n",
-    "    poster_ax['explain'].set_xlim(0, 9)\n",
-    "    poster_ax['explain'].text(x = 9 * 0.03, y = 6 * 0.03, s = txt,\n",
+    "def render_paragraphs(ax, txt = explanatory_text):\n",
+    "    poster_ax[ax].set_ylim(0, 6)\n",
+    "    poster_ax[ax].set_xlim(0, 9)\n",
+    "    poster_ax[ax].text(x = 9 * 0.03, y = 6 * 0.03, s = txt,\n",
     "        fontweight = 'bold',\n",
     "        horizontalalignment = 'left', verticalalignment = 'bottom',\n",
     "        fontsize = set_font['medium'], color = set_color['OrangeDark'])\n",
     "    \n",
-    "render_explanation()"
+    "render_paragraphs('explain', explanatory_text)\n",
+    "render_paragraphs('method',       method_text)"
    ]
   },
   {
@@ -1164,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "65311cb6-7c5a-4d9b-8960-47244f43d3bc",
    "metadata": {},
    "outputs": [],
@@ -1249,12 +1281,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "66c2d825-5009-40c7-8cb3-173d4bf3bc79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def draw_bar(ax, major_col, minor_col = None, dat = cluster_data.copy(),\n",
+    "def draw_bar(ax, major_col, color_col, dat = cluster_data.copy(),\n",
     "             unit = None):\n",
     "    \n",
     "    dat = dat.sort_values('hdi').copy()\n",
@@ -1298,7 +1330,7 @@
     "    poster_ax[ax].barh(\n",
     "        y = dat['bar_spacing'], height = bar_space,\n",
     "        width = dat['scaled_major'] * bar_ceiling,\n",
-    "        color = set_color['OrangeLight'], edgecolor = set_color['OrangeDark'],\n",
+    "        color = dat[color_col], edgecolor = set_color['OrangeDark'],\n",
     "        lw = 2, left = bar_start)\n",
     "    \n",
     "    ## draw bar labels\n",
@@ -1320,11 +1352,23 @@
     "                horizontalalignment = 'left', verticalalignment = 'center',\n",
     "                fontsize = set_font['small'], fontweight = 'bold',\n",
     "                color = set_color['OrangeDark'])\n",
+    "            \n",
+    "def draw_legend(ax):\n",
+    "    poster_ax[ax].plot(-1, -1, lw = 5,\n",
+    "        color = set_color['AzureMedium'], label = '1st Quartile')\n",
+    "    poster_ax[ax].plot(-1, -1, lw = 5,\n",
+    "        color = set_color['AzureLight'], label = '2nd-3rd Quartile')\n",
+    "    poster_ax[ax].plot(-1, -1, lw = 5,\n",
+    "        color = set_color['AzureBG'], label = '4th Quartile')\n",
+    "    poster_ax[ax].legend(loc = 'lower right',\n",
+    "        facecolor = set_color['OrangeBG'], edgecolor = set_color['OrangeDark'],\n",
+    "        fontsize = set_font['small'], labelcolor = set_color['OrangeDark'])\n",
     "\n",
     "## execute code\n",
-    "draw_bar('bar1', 'hdi')\n",
-    "draw_bar('bar2', 'population',unit = '/M')\n",
-    "draw_bar('bar3', 'rep_pct', unit = '%')"
+    "draw_bar('bar1', 'hdi',        'hdi_color')\n",
+    "draw_legend('bar1')\n",
+    "draw_bar('bar2', 'population', 'pop_color', unit = '/M')\n",
+    "draw_bar('bar3', 'rep_pct',    'rep_color', unit = '%')"
    ]
   },
   {
@@ -1337,19 +1381,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "902e7bd8-d1df-416a-82a5-3c52df3fbf95",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def brew_colors(stat_series, stat_cuts):\n",
-    "    stat_cuts = np.append(stat_cuts.values, 9e9)\n",
-    "    stat_cuts = np.append(-9e9, stat_cuts)\n",
-    "    stat_labels = ['AzureBG', 'AzureLight', 'AzureMedium']\n",
-    "    stat_series = pd.cut(stat_series, stat_cuts, labels = stat_labels)\n",
-    "    stat_series = stat_series.replace(set_color)\n",
-    "    return stat_series\n",
-    "\n",
     "def draw_color_cluster(ax, poly_color = None,\n",
     "        poly = clust_polys_l2, map_mask = [can_mask, mex_mask]):\n",
     "\n",
@@ -1375,17 +1411,9 @@
     "        lw = 1, zorder = 9)\n",
     "\n",
     "## execute code - color maps\n",
-    "new_state_colors = brew_colors(cluster_data['hdi'],\n",
-    "                         cluster_data.hdi.quantile([0.25, 0.75]))\n",
-    "draw_color_cluster('minimap1', new_state_colors)\n",
-    "\n",
-    "new_state_colors = brew_colors(cluster_data['population'],\n",
-    "                         cluster_data.population.quantile([0.25, 0.75]))\n",
-    "draw_color_cluster('minimap2', new_state_colors)\n",
-    "\n",
-    "new_state_colors = brew_colors(cluster_data['rep_pct'],\n",
-    "                         cluster_data.rep_pct.quantile([0.25, 0.75]))\n",
-    "draw_color_cluster('minimap3', new_state_colors)"
+    "draw_color_cluster('minimap1', cluster_data['hdi_color'])\n",
+    "draw_color_cluster('minimap2', cluster_data['pop_color'])\n",
+    "draw_color_cluster('minimap3', cluster_data['rep_color'])"
    ]
   },
   {
@@ -1398,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "82bf0029-1941-481e-90af-181cfd29ab5d",
    "metadata": {},
    "outputs": [],
@@ -1422,13 +1450,13 @@
     "make_title('bar3', 'Fig. 4a: Percent Voting For The\\nRepublican ' +\\\n",
     "           'Pres. Candidate in 2020')\n",
     "\n",
-    "make_title('minimap1', 'Figure 2b: HDI Quantile Map')\n",
-    "make_title('minimap2', 'Figure 3b: Population Quantile Map')\n",
-    "make_title('minimap3', 'Figure 4b: Republican Quantile Map')\n",
+    "make_title('minimap1', 'Fig. 2b: HDI Quantile Map')\n",
+    "make_title('minimap2', 'Fig. 3b: Population Quantile Map')\n",
+    "make_title('minimap3', 'Fig. 4b: Republican Quantile Map')\n",
     "\n",
     "make_title('method','Method: Calculating New State Borders')\n",
-    "make_title('elbow','Figure 5:')\n",
-    "make_title('map2', 'Figure 6:')"
+    "make_title('elbow','Fig. 5: Stage 1 Clusters-By-Fit Curve\\n\\n[TO BE ADDED]')\n",
+    "make_title('map2', 'Fig. 6: Stage 1 Clusters')"
    ]
   },
   {
@@ -1505,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "b2860728-2bc2-401e-a043-c037c8752604",
    "metadata": {},
    "outputs": [],
@@ -1518,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "257b6438-6ef8-4ea2-b4d8-a5039053e607",
    "metadata": {},
    "outputs": [
@@ -1527,19 +1555,19 @@
      "output_type": "stream",
      "text": [
       "Time log:\n",
-      "   H2: 21:16:29\n",
-      "   H3: 21:16:29\n",
-      "  GD1: 21:16:29\n",
-      "  RD1: 21:16:29\n",
-      "  RD2: 21:16:29\n",
-      "  RD3: 21:16:29\n",
-      "  MD1: 21:17:34\n",
-      "  MD2: 21:17:34\n",
-      "  MD3: 21:17:34\n",
-      " PVD1: 21:17:35\n",
-      " PVD2: 21:17:36\n",
-      "  RV0: 21:17:36\n",
-      "  End: 21:19:14\n"
+      "   H2: 10:07:08\n",
+      "   H3: 10:07:08\n",
+      "  GD1: 10:07:08\n",
+      "  RD1: 10:07:08\n",
+      "  RD2: 10:07:08\n",
+      "  RD3: 10:07:08\n",
+      "  MD1: 10:08:18\n",
+      "  MD2: 10:08:18\n",
+      "  MD3: 10:08:18\n",
+      " PVD1: 10:08:19\n",
+      " PVD2: 10:08:20\n",
+      "  RV0: 10:08:20\n",
+      "  End: 10:10:00\n"
      ]
     }
    ],
