Improve coloring (z-scores instead of quartiles), and min/max context in bars

--- a/1_pop_cluster_map.ipynb
+++ b/1_pop_cluster_map.ipynb
@@ -926,13 +926,16 @@
     "    stat_series = stat_series.replace(set_color)\n",
     "    return stat_series\n",
     "\n",
+    "def z_score_color(x, c = ['AzureBG', 'AzureLight', 'AzureMedium']):\n",
+    "    z = (x - x.mean()) / x.std()\n",
+    "    z = pd.cut(z, [-9999, -1, 1, 9999], labels = c)\n",
+    "    z = z.replace(set_color)\n",
+    "    return z\n",
+    "\n",
     "## execute code\n",
-    "cluster_data['hdi_color'] = brew_colors(cluster_data['hdi'],\n",
-    "    cluster_data['hdi'].quantile([0.25, 0.75]))\n",
-    "cluster_data['pop_color'] = brew_colors(cluster_data['population'],\n",
-    "    cluster_data['population'].quantile([0.25, 0.75]))\n",
-    "cluster_data['rep_color'] = brew_colors(cluster_data['rep_pct'],\n",
-    "    cluster_data['rep_pct'].quantile([0.25, 0.75]))"
+    "cluster_data['hdi_color'] = z_score_color(cluster_data['hdi'])\n",
+    "cluster_data['pop_color'] = z_score_color(np.log(cluster_data['population']))\n",
+    "cluster_data['rep_color'] = z_score_color(cluster_data['rep_pct'])"
    ]
   },
   {
@@ -1286,14 +1289,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def draw_bar(ax, major_col, color_col, dat = cluster_data.copy(),\n",
+    "def draw_bar(ax, major_col, color_col, min_max, dat = cluster_data.copy(),\n",
     "             unit = None):\n",
     "    \n",
     "    dat = dat.sort_values('hdi').copy()\n",
     "    \n",
     "    ## scale data for visualization purposes\n",
-    "    def min_max_scale(x):\n",
-    "        x = (x - min(x)) / (max(x) - min(x))\n",
+    "    def min_max_scale(x, mm = min_max):\n",
+    "        x = (x - min(mm)) / (max(mm) - min(mm))\n",
     "        n = 0.99\n",
     "        x = (x * n) + (1 - n)\n",
     "        return x\n",
@@ -1355,20 +1358,20 @@
     "            \n",
     "def draw_legend(ax):\n",
     "    poster_ax[ax].plot(-1, -1, lw = 5,\n",
-    "        color = set_color['AzureMedium'], label = '1st Quartile')\n",
+    "        color = set_color['AzureMedium'], label = 'High (Z ≥ +1)')\n",
     "    poster_ax[ax].plot(-1, -1, lw = 5,\n",
-    "        color = set_color['AzureLight'], label = '2nd-3rd Quartile')\n",
+    "        color = set_color['AzureLight'], label = 'Medium (|Z| < 1')\n",
     "    poster_ax[ax].plot(-1, -1, lw = 5,\n",
-    "        color = set_color['AzureBG'], label = '4th Quartile')\n",
+    "        color = set_color['AzureBG'], label = 'Low (Z ≤ -1)')\n",
     "    poster_ax[ax].legend(loc = 'lower right',\n",
     "        facecolor = set_color['OrangeBG'], edgecolor = set_color['OrangeDark'],\n",
     "        fontsize = set_font['small'], labelcolor = set_color['OrangeDark'])\n",
     "\n",
     "## execute code\n",
-    "draw_bar('bar1', 'hdi',        'hdi_color')\n",
+    "draw_bar('bar1', 'hdi',        'hdi_color', (750, 850))\n",
     "draw_legend('bar1')\n",
-    "draw_bar('bar2', 'population', 'pop_color', unit = '/M')\n",
-    "draw_bar('bar3', 'rep_pct',    'rep_color', unit = '%')"
+    "draw_bar('bar2', 'population', 'pop_color', (0, 50e6),      unit = '/M')\n",
+    "draw_bar('bar3', 'rep_pct',    'rep_color', (0.25, 0.75), unit = '%')"
    ]
   },
   {
@@ -1555,19 +1558,19 @@
      "output_type": "stream",
      "text": [
       "Time log:\n",
-      "   H2: 10:07:08\n",
-      "   H3: 10:07:08\n",
-      "  GD1: 10:07:08\n",
-      "  RD1: 10:07:08\n",
-      "  RD2: 10:07:08\n",
-      "  RD3: 10:07:08\n",
-      "  MD1: 10:08:18\n",
-      "  MD2: 10:08:18\n",
-      "  MD3: 10:08:18\n",
-      " PVD1: 10:08:19\n",
-      " PVD2: 10:08:20\n",
-      "  RV0: 10:08:20\n",
-      "  End: 10:10:00\n"
+      "   H2: 19:33:43\n",
+      "   H3: 19:33:43\n",
+      "  GD1: 19:33:43\n",
+      "  RD1: 19:33:43\n",
+      "  RD2: 19:33:43\n",
+      "  RD3: 19:33:43\n",
+      "  MD1: 19:34:52\n",
+      "  MD2: 19:34:52\n",
+      "  MD3: 19:34:52\n",
+      " PVD1: 19:34:53\n",
+      " PVD2: 19:34:54\n",
+      "  RV0: 19:34:54\n",
+      "  End: 19:36:27\n"
      ]
     }
    ],
