Fix capitalization of small words; clarify that HDI correlates negatively with Republican lean

--- a/1_pop_cluster_map.ipynb
+++ b/1_pop_cluster_map.ipynb
@@ -1446,11 +1446,11 @@
     "\n",
     "## park titles here\n",
     "make_title('map1', 'Figure 1: How State Borders Might Look If They ' +\\\n",
-    "           'Corresponded To Where People Live')\n",
+    "           'Corresponded to Where People Live')\n",
     "\n",
-    "make_title('bar1', 'Fig. 2a: HDI Score For Each Cluster')\n",
-    "make_title('bar2', 'Fig. 3a: Population Total For\\nEach Cluster')\n",
-    "make_title('bar3', 'Fig. 4a: Percent Voting For The\\nRepublican ' +\\\n",
+    "make_title('bar1', 'Fig. 2a: HDI Score for Each Cluster')\n",
+    "make_title('bar2', 'Fig. 3a: Population Total for\\nEach Cluster')\n",
+    "make_title('bar3', 'Fig. 4a: Percent Voting for the\\nRepublican ' +\\\n",
     "           'Pres. Candidate in 2020')\n",
     "\n",
     "make_title('minimap1', 'Fig. 2b: HDI Quantile Map')\n",
@@ -1458,7 +1458,7 @@
     "make_title('minimap3', 'Fig. 4b: Republican Quantile Map')\n",
     "\n",
     "make_title('method','Method: Calculating New State Borders')\n",
-    "make_title('elbow','Fig. 5: Stage 1 Clusters-By-Fit Curve\\n\\n[TO BE ADDED]')\n",
+    "make_title('elbow','Fig. 5: Stage 1 Clusters-By-Fit Curve\\n\\n[WORK IN PROGRESS - \\nMethods content will be\\nmoved to an appx]')\n",
     "make_title('map2', 'Fig. 6: Stage 1 Clusters')"
    ]
   },
@@ -1558,19 +1558,19 @@
      "output_type": "stream",
      "text": [
       "Time log:\n",
-      "   H2: 14:53:49\n",
-      "   H3: 14:53:49\n",
-      "  GD1: 14:53:49\n",
-      "  RD1: 14:53:49\n",
-      "  RD2: 14:53:50\n",
-      "  RD3: 14:53:50\n",
-      "  MD1: 14:54:57\n",
-      "  MD2: 14:54:57\n",
-      "  MD3: 14:54:57\n",
-      " PVD1: 14:54:58\n",
-      " PVD2: 14:54:59\n",
-      "  RV0: 14:54:59\n",
-      "  End: 14:56:31\n"
+      "   H2: 18:37:58\n",
+      "   H3: 18:37:58\n",
+      "  GD1: 18:37:58\n",
+      "  RD1: 18:37:58\n",
+      "  RD2: 18:37:58\n",
+      "  RD3: 18:37:58\n",
+      "  MD1: 18:39:06\n",
+      "  MD2: 18:39:06\n",
+      "  MD3: 18:39:06\n",
+      " PVD1: 18:39:07\n",
+      " PVD2: 18:39:08\n",
+      "  RV0: 18:39:09\n",
+      "  End: 18:40:46\n"
      ]
     }
    ],
