--- a/1_pop_cluster_map.ipynb
+++ b/1_pop_cluster_map.ipynb
@@ -47,8 +47,8 @@
     "from datetime           import datetime, timedelta\n",
     "from cartopy            import feature\n",
     "from cartopy.crs        import LambertConformal, PlateCarree\n",
-    "from cartopy.io import shapereader\n",
-    "from cartopy.feature import ShapelyFeature\n",
+    "from cartopy.io         import shapereader\n",
+    "from cartopy.feature    import ShapelyFeature\n",
     "from dbfread            import DBF\n",
     "from docx               import Document\n",
     "from textwrap           import fill as txt_wrap\n",
@@ -145,12 +145,14 @@
     "    }\n",
     "for i in set_color.keys(): set_color[i] = to_hex(hsv_to_rgb(set_color[i]))\n",
     "\n",
-    "## set font sizes\n",
+    "## set font and sizes\n",
     "set_font = {\n",
-    "    'small' : 15,\n",
-    "    'medium': 20,\n",
-    "    'large' : 25\n",
+    "    'small' : 18,\n",
+    "    'medium': 24 + 2,\n",
+    "    'large' : 36,\n",
+    "    'char_width': 100\n",
     "    }\n",
+    "plt.rcParams['font.family'] = 'Quicksand'\n",
     "\n",
     "## time-saver settings\n",
     "set_acceleration = {\n",
@@ -491,8 +493,9 @@
     "    return explain\n",
     "\n",
     "## execute code\n",
-    "explanatory_text = read_docx_text('A_Input/explanation.docx', 100)\n",
-    "method_text      = read_docx_text('A_Input/method.docx',       70)\n",
+    "explanatory_text = read_docx_text('A_Input/explanation.docx',\n",
+    "                                  set_font['char_width'])\n",
+    "analysis_text = read_docx_text('A_Input/analysis.docx', set_font['char_width'])\n",
     "log_time('RD3')"
    ]
   },
@@ -953,7 +956,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_explain_stats(txt = explanatory_text, dat = cluster_data):\n",
+    "def calculate_text_stats(txt, dat = cluster_data):\n",
     "    \n",
     "    ## make shell to hold statistics\n",
     "    stats = dict()\n",
@@ -994,8 +997,10 @@
     "    ## insert statistics into the text\n",
     "    return txt.format(**stats)\n",
     "\n",
+    "\n",
     "## execute code\n",
-    "explanatory_text = calculate_explain_stats()"
+    "explanatory_text = calculate_text_stats(explanatory_text)\n",
+    "analysis_text  = calculate_text_stats(analysis_text)"
    ]
   },
   {
@@ -1099,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 85,
    "id": "16ac184b-0922-4b57-b5f8-742e0a0763cb",
    "metadata": {},
    "outputs": [],
@@ -1143,11 +1148,8 @@
     "    poster_ax['minimap3'] = poster_fig.add_subplot(\n",
     "        poster_grid[6:8, 15:18], projection = set_map['map_proj'])\n",
     "    \n",
-    "    ## methods\n",
-    "    poster_ax['elbow'] = poster_fig.add_subplot(poster_grid[8:10, 9:12])\n",
-    "    poster_ax['map2'] = poster_fig.add_subplot(poster_grid[10:12, 9:12],\n",
-    "        projection = set_map['map_proj'])\n",
-    "    poster_ax['method'] = poster_fig.add_subplot(poster_grid[8:12, 12:18])\n",
+    "    ## analysis\n",
+    "    poster_ax['analysis'] = poster_fig.add_subplot(poster_grid[8:12, 9:18])\n",
     "\n",
     "    ## remove axis ticks\n",
     "    for i in poster_ax.keys():\n",
@@ -1172,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 86,
    "id": "c871d19a-6a5b-4561-adad-1df5fa151c7c",
    "metadata": {},
    "outputs": [],
@@ -1181,12 +1183,11 @@
     "    poster_ax[ax].set_ylim(0, 6)\n",
     "    poster_ax[ax].set_xlim(0, 9)\n",
     "    poster_ax[ax].text(x = 9 * 0.03, y = 6 * 0.03, s = txt,\n",
-    "        fontweight = 'bold',\n",
     "        horizontalalignment = 'left', verticalalignment = 'bottom',\n",
     "        fontsize = set_font['medium'], color = set_color['OrangeDark'])\n",
     "    \n",
     "render_paragraphs('explain', explanatory_text)\n",
-    "render_paragraphs('method',       method_text)"
+    "render_paragraphs('analysis',       analysis_text)"
    ]
   },
   {
@@ -1199,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 87,
    "id": "65311cb6-7c5a-4d9b-8960-47244f43d3bc",
    "metadata": {},
    "outputs": [],
@@ -1249,7 +1250,7 @@
     "            x = dat.at[i, 'INTPTLON'], y = dat.at[i, 'INTPTLAT'],\n",
     "            s = dat.at[i, 'label'],\n",
     "            fontsize = set_font['small'], color = set_color['AzureDark'],\n",
-    "            transform = PlateCarree(), fontweight = 'bold',\n",
+    "            transform = PlateCarree(),\n",
     "            bbox = bb, zorder = 9)\n",
     "\n",
     "## draw cluster boundaries\n",
@@ -1266,12 +1267,7 @@
     "draw_generic_map('map1')\n",
     "draw_census_centroids('map1')\n",
     "draw_cluster('map1', clust_polys_l2)\n",
-    "label_cluster('map1')\n",
-    "\n",
-    "## execute code - map 1\n",
-    "draw_generic_map('map2')\n",
-    "draw_census_centroids('map2')\n",
-    "draw_cluster('map2', clust_polys_l1)"
+    "label_cluster('map1')"
    ]
   },
   {
@@ -1284,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 88,
    "id": "66c2d825-5009-40c7-8cb3-173d4bf3bc79",
    "metadata": {},
    "outputs": [],
@@ -1341,7 +1337,7 @@
     "        poster_ax[ax].text(\n",
     "            y = dat.loc[i, 'bar_spacing'], x = lab_pad, s = i,\n",
     "            horizontalalignment = 'left', verticalalignment = 'center',\n",
-    "            fontsize = set_font['small'], fontweight = 'bold',\n",
+    "            fontsize = set_font['small'],\n",
     "            color = set_color['OrangeDark'])\n",
     "        \n",
     "    ## label major bars\n",
@@ -1353,14 +1349,14 @@
     "                    bar_ceiling + 0.01),\n",
     "                s = dat.loc[i, 'label_major'],\n",
     "                horizontalalignment = 'left', verticalalignment = 'center',\n",
-    "                fontsize = set_font['small'], fontweight = 'bold',\n",
+    "                fontsize = set_font['small'],\n",
     "                color = set_color['OrangeDark'])\n",
     "            \n",
     "def draw_legend(ax):\n",
     "    poster_ax[ax].plot(-1, -1, lw = 5,\n",
     "        color = set_color['AzureMedium'], label = 'High (Z ≥ +1)')\n",
     "    poster_ax[ax].plot(-1, -1, lw = 5,\n",
-    "        color = set_color['AzureLight'], label = 'Medium (|Z| < 1')\n",
+    "        color = set_color['AzureLight'], label = 'Med. (|Z| < 1)')\n",
     "    poster_ax[ax].plot(-1, -1, lw = 5,\n",
     "        color = set_color['AzureBG'], label = 'Low (Z ≤ -1)')\n",
     "    poster_ax[ax].legend(loc = 'lower right',\n",
@@ -1384,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 89,
    "id": "902e7bd8-d1df-416a-82a5-3c52df3fbf95",
    "metadata": {},
    "outputs": [],
@@ -1429,37 +1425,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 90,
    "id": "82bf0029-1941-481e-90af-181cfd29ab5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_title(ax, title):\n",
-    "    margin = max(poster_ax[ax].get_xlim()) * 0.01\n",
+    "def make_title(ax, title, fs = 'medium', mf = 2):\n",
+    "    margin = max(poster_ax[ax].get_xlim()) * 0.01 * mf\n",
     "    poster_ax[ax].text(\n",
-    "        x = max(poster_ax[ax].get_xlim()) - margin,\n",
+    "        x = min(poster_ax[ax].get_xlim()) + margin,\n",
     "        y = max(poster_ax[ax].get_ylim()) - margin,\n",
     "        s = title,\n",
-    "        fontsize = set_font['medium'], fontweight = 'bold',\n",
-    "        color = set_color['OrangeDark'], zorder = 11,\n",
-    "        horizontalalignment = 'right', verticalalignment = 'top')\n",
+    "        fontsize = set_font[fs],\n",
+    "        color = set_color['OrangeDark'], zorder = 11, fontweight = 'bold',\n",
+    "        horizontalalignment = 'left', verticalalignment = 'top',\n",
+    "        bbox = dict(facecolor = set_color['OrangeBG'] + '80', \n",
+    "                    edgecolor = '#FF001100', boxstyle = 'round,pad=0')\n",
+    "    )\n",
     "\n",
     "## park titles here\n",
     "make_title('map1', 'Figure 1: How State Borders Might Look If They ' +\\\n",
     "           'Corresponded to Where People Live')\n",
     "\n",
-    "make_title('bar1', 'Fig. 2a: HDI Score for Each Cluster')\n",
-    "make_title('bar2', 'Fig. 3a: Population Total for\\nEach Cluster')\n",
-    "make_title('bar3', 'Fig. 4a: Percent Voting for the\\nRepublican ' +\\\n",
-    "           'Pres. Candidate in 2020')\n",
+    "make_title('bar1', 'Fig. 2a: New State HDI Scores')\n",
+    "make_title('bar2', 'Fig. 3a: New State Population')\n",
+    "make_title('bar3', 'Fig. 4a: N.S. Percent Republican')\n",
     "\n",
     "make_title('minimap1', 'Fig. 2b: HDI Quantile Map')\n",
     "make_title('minimap2', 'Fig. 3b: Population Quantile Map')\n",
     "make_title('minimap3', 'Fig. 4b: Republican Quantile Map')\n",
     "\n",
-    "make_title('method','Method: Calculating New State Borders')\n",
-    "make_title('elbow','Fig. 5: Stage 1 Clusters-By-Fit Curve\\n\\n[WORK IN PROGRESS - \\nMethods content will be\\nmoved to an appx]')\n",
-    "make_title('map2', 'Fig. 6: Stage 1 Clusters')"
+    "make_title('explain','  Redrawing State Borders to Match Where People Live', \n",
+    "           'large', mf = 1)"
    ]
   },
   {
@@ -1536,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 91,
    "id": "b2860728-2bc2-401e-a043-c037c8752604",
    "metadata": {},
    "outputs": [],
@@ -1549,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 92,
    "id": "257b6438-6ef8-4ea2-b4d8-a5039053e607",
    "metadata": {},
    "outputs": [
@@ -1558,19 +1555,19 @@
      "output_type": "stream",
      "text": [
       "Time log:\n",
-      "   H2: 18:37:58\n",
-      "   H3: 18:37:58\n",
-      "  GD1: 18:37:58\n",
-      "  RD1: 18:37:58\n",
-      "  RD2: 18:37:58\n",
-      "  RD3: 18:37:58\n",
-      "  MD1: 18:39:06\n",
-      "  MD2: 18:39:06\n",
-      "  MD3: 18:39:06\n",
-      " PVD1: 18:39:07\n",
-      " PVD2: 18:39:08\n",
-      "  RV0: 18:39:09\n",
-      "  End: 18:40:46\n"
+      "   H2: 14:21:55\n",
+      "   H3: 14:21:55\n",
+      "  GD1: 14:21:55\n",
+      "  RD1: 14:21:55\n",
+      "  RD2: 14:21:55\n",
+      "  RD3: 14:21:55\n",
+      "  MD1: 14:23:06\n",
+      "  MD2: 14:23:06\n",
+      "  MD3: 14:23:06\n",
+      " PVD1: 14:23:07\n",
+      " PVD2: 14:23:09\n",
+      "  RV0: 14:34:12\n",
+      "  End: 14:34:33\n"
      ]
     }
    ],
