Model coordinates using various alternative ML models and compare fit to primary model

--- a/1_pop_cluster_map.ipynb
+++ b/1_pop_cluster_map.ipynb
@@ -46,7 +46,7 @@
     "from os.path            import isfile, isdir\n",
     "from datetime           import datetime, timedelta\n",
     "from cartopy            import feature\n",
-    "from cartopy.crs        import LambertConformal, PlateCarree\n",
+    "from cartopy.crs        import LambertConformal, PlateCarree, AzimuthalEquidistant\n",
     "from cartopy.io         import shapereader\n",
     "from cartopy.feature    import ShapelyFeature\n",
     "from dbfread            import DBF\n",
@@ -157,13 +157,14 @@
     "## time-saver settings\n",
     "set_acceleration = {\n",
     "    'dbf_cache'              : True,\n",
-    "    'sample_size'            : 1/5, ## 1/5, 1/10, 1/20\n",
+    "    'sample_size'            : 1/20, ## 1/5, 1/10, 1/20\n",
     "    'pop_cache'              : True,\n",
     "    'distance_parallel_cores': 8,\n",
     "    'distance_cache'         : True,\n",
     "    'cluster_parallel_cores' : 8,\n",
     "    'cluster_L1_cache'       : True,\n",
-    "    'cluster_L2_cache'       : True\n",
+    "    'cluster_L2_cache'       : True,\n",
+    "    'bypass_testing'         : False\n",
     "    }\n",
     "\n",
     "## map parameters\n",
@@ -172,9 +173,14 @@
     "    'map_proj': LambertConformal(\n",
     "        central_longitude = (-124.73 - 66.95) / 2,\n",
     "        central_latitude = (25.12 + 49.38) / 2,\n",
-    "        standard_parallels = (25.12, 49.38))\n",
+    "        standard_parallels = (25.12, 49.38)),\n",
+    "    'dist_proj': AzimuthalEquidistant(\n",
+    "        central_longitude = (-124.73 - 66.95) / 2,\n",
+    "        central_latitude  = (25.12 + 49.38) / 2,\n",
+    "        )\n",
     "    }\n",
-    "log_time('H3')"
+    "log_time('H3')\n",
+    "\n"
    ]
   },
   {
@@ -618,6 +624,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8deecdc-55ae-4f46-9fc4-4e084a1bbcaf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "bc19f1f2-f863-4872-8427-023b5a662713",
    "metadata": {},
@@ -696,7 +710,10 @@
     "    \n",
     "    ## find the solution that is furthest from the line of equality (the elbow)\n",
     "    elbow_score = elbow_score.min(axis = 1)\n",
-    "    elbow_score = (elbow_score == np.max(elbow_score)).astype(int)\n",
+    "    #elbow_score = (elbow_score == np.max(elbow_score)).astype(int)\n",
+    "    the_elbow = max(np.where(elbow_score == np.max(elbow_score)))\n",
+    "    elbow_score = (elbow_score * 0).astype(int)\n",
+    "    elbow_score[the_elbow] = 1\n",
     "    \n",
     "    ## package and export\n",
     "    elbow_score = pd.DataFrame({'Elbow':elbow_score}).T\n",
@@ -770,7 +787,6 @@
     "    \n",
     "    ## extract level one partition and set max number of level two clusters\n",
     "    cl1 = ecs(cl1)\n",
-    "    ## max_cl2_clusters = int(48 / max(cl1)) * 2 ## alternative approach\n",
     "    max_cl2_clusters = max(cl1)\n",
     "    \n",
     "    ## generate level two clusters for the cities in each level one cluster\n",
@@ -786,11 +802,10 @@
     "        ## define useful indexes\n",
     "        only_cluster = ~cl2[i].index.isin(['Fit', 'Elbow'])\n",
     "        best_elbow = cl2[i].loc['Elbow'] == 1\n",
+    "        print(only_cluster)\n",
+    "        print(best_elbow)\n",
     "        \n",
     "        ## extract elbow statistics\n",
-    "        #elbow_range = best_elbow.copy()\n",
-    "        #elbow_range.iat[0] = True\n",
-    "        #elbow_range.iat[elbow_range.shape[0]-1] = True\n",
     "        stats = [cl2[i].loc[~only_cluster, ]]\n",
     "        stat_container = [np.nan for k in range(0, cl2[i].shape[0]-2)]\n",
     "        stat_container[0] = stats\n",
@@ -805,6 +820,8 @@
     "    cl2 = pd.concat(cl2.values(), axis = 0).reset_index()\n",
     "    cl2 = cl2.rename({'index':'GEO_ID'}, axis = 1).set_index('GEO_ID')\n",
     "    return cl2\n",
+    "\n",
+    "test_this = agglom_l2()\n",
     "\n",
     "## execute code (Note - stats object is too complex to reassemble correctly.\n",
     "   ## This ok for now as it is only being saved for 'just-in-case' reasons.\n",
@@ -1104,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 21,
    "id": "16ac184b-0922-4b57-b5f8-742e0a0763cb",
    "metadata": {},
    "outputs": [],
@@ -1174,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 22,
    "id": "c871d19a-6a5b-4561-adad-1df5fa151c7c",
    "metadata": {},
    "outputs": [],
@@ -1200,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 23,
    "id": "65311cb6-7c5a-4d9b-8960-47244f43d3bc",
    "metadata": {},
    "outputs": [],
@@ -1280,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 24,
    "id": "66c2d825-5009-40c7-8cb3-173d4bf3bc79",
    "metadata": {},
    "outputs": [],
@@ -1380,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 25,
    "id": "902e7bd8-d1df-416a-82a5-3c52df3fbf95",
    "metadata": {},
    "outputs": [],
@@ -1425,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 26,
    "id": "82bf0029-1941-481e-90af-181cfd29ab5d",
    "metadata": {},
    "outputs": [],
@@ -1461,6 +1478,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2fe42104-9eb2-47be-8050-1f1d1125eede",
+   "metadata": {},
+   "source": [
+    "#### write poster to file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "b2860728-2bc2-401e-a043-c037c8752604",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_poster():\n",
+    "    poster_fig.savefig('C_Output/pop_cluster_map.png')\n",
+    "    #poster_fig.savefig('C_Output/pop_cluster_map.pdf')\n",
+    "save_poster()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f1905627-f745-4265-8fe0-133a3985922f",
    "metadata": {},
    "source": [
@@ -1469,16 +1507,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "91090347-cfb3-4db8-a0e2-14a602e70466",
+   "metadata": {},
+   "source": [
+    "#### disable testing for dev purposes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "eb831133-d6c3-41a4-bbfc-01870b6d68bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert not set_acceleration['bypass_testing'], 'ERROR: TESTING MODULE BYPASSED'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f9df9eb9-cef0-40a2-9700-f3b77a68de61",
    "metadata": {},
    "source": [
-    "#### Test 1 - "
+    "#### Test 1 - Elbow Curve (How good is the k?)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0ff17c8-1c3b-45f5-9a53-f007101ac066",
+   "id": "bc30ce8a-12fb-418e-bed4-99228bc7d9c1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1488,32 +1544,116 @@
    "id": "7732abb0-33ea-45b3-8efa-a4f03b65e63c",
    "metadata": {},
    "source": [
-    "#### Test 2 - "
+    "#### Test 2 - Compare Fit to Alternatives (How good is the model, given the k?)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "id": "60c8a2a9-0dd7-47da-a1ef-f253a6e9018d",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2072d112-7ed8-4bdb-be59-d11f11b05828",
-   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KMeans      0.53\n",
+       "Solution    0.50\n",
+       "Agglom      0.49\n",
+       "GMM         0.29\n",
+       "DBSCAN     -0.09\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#### Test 3 - "
+    "## to-do: \n",
+    "   ## encapsulate as functions\n",
+    "   ## move libraries to front\n",
+    "   ## add distance-based fit metric\n",
+    "\n",
+    "from sklearn.cluster import KMeans, DBSCAN\n",
+    "from sklearn.mixture import GaussianMixture\n",
+    "from sklearn.metrics import silhouette_score\n",
+    "\n",
+    "alt_k = len(geo_data.l2_index.unique())\n",
+    "alt_model = dict()\n",
+    "\n",
+    "\n",
+    "## ----- PARTITION DATA\n",
+    "\n",
+    "## project coordinates to provide pseudo-Euclidean points to KM and GMM\n",
+    "pseudo_xy = np.array(geo_data[['INTPTLAT', 'INTPTLON']])\n",
+    "pseudo_xy = set_map['dist_proj'].transform_points(\n",
+    "    x = pseudo_xy[:, 1], y = pseudo_xy[:, 0],\n",
+    "    src_crs = PlateCarree()\n",
+    "    )[:, 0:2]\n",
+    "\n",
+    "## calculate maximum intra-group distance for DBSCAN\n",
+    "def max_intra_dist(clusters = geo_data.l2_index, dist = tract_distance):\n",
+    "    \n",
+    "    ## construct matrix of points that are in the same group\n",
+    "    clusters = np.array(clusters)\n",
+    "    score = clusters.reshape(clusters.shape[0], 1)\n",
+    "    score = (score == score.T).astype(int)\n",
+    "    \n",
+    "    ## sum distance between points in the same cluster\n",
+    "    score = np.array(dist * score).reshape(-1, 1)\n",
+    "    score = np.quantile(score[score > 0], 0.9)\n",
+    "    return int(score)\n",
+    "\n",
+    "alt_max_dist = max_intra_dist()\n",
+    "\n",
+    "## model projected points using k-means clustering\n",
+    "alt_model['KMeans'] = KMeans(init = 'k-means++', n_clusters = alt_k)\n",
+    "alt_model['KMeans'] = pd.Series(alt_model['KMeans'].fit_predict(pseudo_xy))\n",
+    "\n",
+    "## model projected points using Gaussian Mixture Modeling\n",
+    "alt_model['GMM'] = GaussianMixture(n_components = alt_k)\n",
+    "alt_model['GMM'] = pd.Series(alt_model['GMM'].fit_predict(pseudo_xy))\n",
+    "\n",
+    "## model distances using simple agglomerative clustering\n",
+    "alt_model['Agglom'] = AgglomerativeClustering(n_clusters = alt_k,\n",
+    "    affinity = 'precomputed', linkage = 'average')\n",
+    "alt_model['Agglom'] = pd.Series(alt_model['Agglom'].fit_predict(tract_distance))\n",
+    "\n",
+    "## model distances using DBSCAN (match alt_k as closely as possible)\n",
+    "def num_cluster(x):\n",
+    "    if np.max(x) > 0:\n",
+    "        return len(np.unique(x[x >= 0]))\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "for i in range(5, alt_max_dist, 5):\n",
+    "    db_model = DBSCAN(eps = i, metric = 'precomputed',\n",
+    "        n_jobs = set_acceleration['cluster_parallel_cores'])\n",
+    "    db_model = db_model.fit_predict(tract_distance)\n",
+    "    if num_cluster(db_model) <= alt_k: break\n",
+    "\n",
+    "alt_model['DBSCAN'] = pd.Series(db_model)\n",
+    "    \n",
+    "## compile cluster solutions  \n",
+    "alt_clusters = pd.concat(alt_model, axis = 1)\n",
+    "alt_clusters['Solution'] = np.array(geo_data.l2_index)\n",
+    "\n",
+    "\n",
+    "## ----- SCORE MODELS\n",
+    "\n",
+    "## calculate silhouette scores for each cluster assignment\n",
+    "alt_sil_scores = dict()\n",
+    "for i in alt_clusters.columns:\n",
+    "    alt_sil_scores[i] = silhouette_score(\n",
+    "        X = np.array(tract_distance).astype(float),\n",
+    "        labels = np.array(alt_clusters[i]),\n",
+    "        metric = 'precomputed')\n",
+    "alt_sil_scores = pd.Series(alt_sil_scores).round(2).sort_values(ascending = 0)\n",
+    "\n",
+    "## calculate in-group distance for each cluster assignment\n",
+    "alt_sil_scores"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7dee7cfd-e870-484c-85f9-32e2280adc12",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1524,53 +1664,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2fe42104-9eb2-47be-8050-1f1d1125eede",
-   "metadata": {},
-   "source": [
-    "#### write poster to file"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "b2860728-2bc2-401e-a043-c037c8752604",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def save_poster():\n",
-    "    poster_fig.savefig('C_Output/pop_cluster_map.png')\n",
-    "    poster_fig.savefig('C_Output/pop_cluster_map.pdf')\n",
-    "save_poster()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "257b6438-6ef8-4ea2-b4d8-a5039053e607",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time log:\n",
-      "   H2: 14:21:55\n",
-      "   H3: 14:21:55\n",
-      "  GD1: 14:21:55\n",
-      "  RD1: 14:21:55\n",
-      "  RD2: 14:21:55\n",
-      "  RD3: 14:21:55\n",
-      "  MD1: 14:23:06\n",
-      "  MD2: 14:23:06\n",
-      "  MD3: 14:23:06\n",
-      " PVD1: 14:23:07\n",
-      " PVD2: 14:23:09\n",
-      "  RV0: 14:34:12\n",
-      "  End: 14:34:33\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "log_time()"
    ]
