--- a/1_pop_cluster_map.ipynb
+++ b/1_pop_cluster_map.ipynb
@@ -53,7 +53,8 @@
     "from docx               import Document\n",
     "from textwrap           import fill as txt_wrap\n",
     "from geopy.distance     import geodesic\n",
-    "from ipyparallel        import Cluster\n",
+    "#from ipyparallel        import Cluster\n",
+    "import ipyparallel as ipp\n",
     "from sklearn.cluster    import AgglomerativeClustering, KMeans, DBSCAN\n",
     "from sklearn.mixture    import GaussianMixture\n",
     "from sklearn.metrics    import silhouette_score\n",
@@ -603,7 +604,7 @@
     "        return xy_dist\n",
     "\n",
     "    ## run engine in parallel for each slice of the data\n",
-    "    with Cluster(n = set_acceleration['distance_parallel_cores']) as clust:\n",
+    "    with ipp.Cluster(n = set_acceleration['distance_parallel_cores']) as clust:\n",
     "        view = clust.load_balanced_view()\n",
     "        asyncresult = view.map_async(measure_distance_parallel_slice, the_iter)\n",
     "        asyncresult.wait_interactive()\n",
@@ -730,7 +731,7 @@
     "    f = partial(f, dist = dist_mat)\n",
     "    \n",
     "    ## run models in parallel\n",
-    "    with Cluster(n = cores) as clust:\n",
+    "    with ipp.Cluster(n = cores) as clust:\n",
     "        view = clust.load_balanced_view()\n",
     "        asyncresult = view.map_async(f, k_range)\n",
     "        asyncresult.wait_interactive()\n",
@@ -1792,7 +1793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
